--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -294,7 +294,7 @@
             </intent-filter>
         </receiver>
 		
-        <service android:name=".beast.onthego.OnTheGoService"
+        <service android:name=".legion.onthego.OnTheGoService"
             android:process=":onthego"
             android:exported="false" />
 
@@ -319,7 +319,7 @@
 
         <!-- started from PhoneWindowManager
              TODO: Should have an android:permission attribute -->
-        <service android:name=".beast.screenrecord.TakeScreenrecordService"
+        <service android:name=".legion.screenrecord.TakeScreenrecordService"
             android:process=":screenrecord"
             android:exported="false" />
 
@@ -359,7 +359,7 @@
                   android:theme="@style/ExTunerSettings"
                   android:label="@string/statusbar_items_title"
                   android:process=":tuner"
-                  android:parentActivityName="com.beast.settings.fragments.StatusBarSettings"
+                  android:parentActivityName="com.legion.settings.fragments.StatusBarSettings"
                   android:exported="true">
         </activity>
 
@@ -367,7 +367,7 @@
                   android:theme="@style/ExTunerSettings"
                   android:label="@string/nav_bar"
                   android:process=":tuner"
-                  android:parentActivityName="com.beast.settings.fragments.NavbarSettings"
+                  android:parentActivityName="com.legion.settings.fragments.NavbarSettings"
                   android:exported="true">
         </activity>
 
@@ -375,7 +375,7 @@
                   android:theme="@style/ExTunerSettings"
                   android:label="@string/tuner_lock_screen"
                   android:process=":tuner"
-                  android:parentActivityName="com.beast.settings.fragments.LockScreenSettings"
+                  android:parentActivityName="com.legion.settings.fragments.LockScreenSettings"
                   android:exported="true">
         </activity>
 
